@@ -40,8 +40,11 @@ apport (0.92) UNRELEASED; urgency=low
   * apport/crashdb_impl/launchpad.py, __init__(): Only do the "download bug
     #2" hack if we actually have an authentication cookie. Thus, do it only on
     the retracing servers, not on the client side. (LP: #125142)
+  * apport/report.py, crash_signature(): Generate a signature for one-line
+    Python tracebacks, too. This sometimes seems to happen, e. g. LP#124588.
+    (LP: #125020)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 24 Jul 2007 19:59:25 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 24 Jul 2007 20:15:25 +0200
 
 apport (0.91) gutsy; urgency=low
 
